KAFKA-18494-3: Minor changes